Fix alignment of icons in local setting navigation
Changed to inline-flex, added gap and center align items.

--- a/app/javascript/flavours/polyam/styles/components/local_settings.scss
+++ b/app/javascript/flavours/polyam/styles/components/local_settings.scss
@@ -51,8 +51,9 @@
   }
 }
 
+// Changed display block to inline-flex and added gap and align-items to fix alignment of icons
 .glitch.local-settings__navigation__item {
-  display: block;
+  display: inline-flex;
   padding: 15px 20px;
   color: inherit;
   background: lighten($ui-secondary-color, 8%);
@@ -66,6 +67,8 @@
   width: 100%;
   text-align: start;
   font-size: inherit;
+  align-items: center;
+  gap: 4px;
 
   .text-icon-button {
     color: inherit;
